Added suport for un mounting devices.

--- a/src/index.html
+++ b/src/index.html
@@ -279,8 +279,8 @@
                     <i class="icon bi-tablet large"></i>
                 </a>
                 <br>
-                <a class="item" id="mb_log" title="Log">
-                    <i class="icon bi-chat large"></i>
+                <a class="item" id="mb_info" title="Info">
+                    <i class="icon bi-info-circle large"></i>
                 </a>
 
             </div>
@@ -290,8 +290,6 @@
         <aside id="sidebar" draggable="true" class="sidebar sidebar-left" tabindex="1">
 
             <div id="sidebar_items" class="items" style="height: 100%">
-
-
             </div>
 
             <div style="display: flex;">
@@ -300,81 +298,50 @@
                 <!-- <i class="ui icon small times" style="width:23px; height:23px"></i> -->
             </div>
 
+            <div id="draghandle" class="draghandle"></div>
+
+            <!-- <div id="accordion" class="ui accordion hidden" style=""> -->
 
 
-            <div id="accordion" class="ui accordion hidden" style="">
-
-                <div id="draghandle" class="draghandle"></div>
 
                 <!-- HOME DIRECTORY -->
-                <div class="title" title="show home folders">
+                <!-- <div class="title" title="show home folders"> -->
                     <!-- <i class="dropdown icon"></i> -->
-                    <span id="tree_home" class="" title="change to home directory">
+                    <!-- <span id="tree_home" class="" title="change to home directory"> -->
                         <!-- <i class="icon large home"></i> -->
                         <!-- <i class="icon bi-house large"></i> -->
-                        Home
-                    </span>
-                </div>
-                <div class="content">
-                    <div class="ui grid">
-                        <div class="column sixteen wide" id="">
-                            <div class="navigate" id="tree_grid" data-id="michael" style="overflow:auto;padding-top: 5px;">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <!-- SEARCH / FIND -->
-                <!-- <div class="title" title="press ctrl+f to start a search"> -->
-                    <!-- <i class="icon bi-search large"></i> -->
-                    <!-- Search Results
-                </div> -->
-                <!-- <div class="grid content" id="search_content">
-                    <div class="column sixteen wide" id="search_results_col">
-                        <div class="" id="search_results_card" style="border:none">
-                            <div class="content" id="search_results">
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
-                <!-- WORKSPACE -->
-                <!-- <div class="title" id="workspace" -->
-                    <!-- title="ctrl+shift+click on a file or directory to add it to your workspace"> -->
-                    <!-- <i class="icon bi-clipboard large"></i> -->
-                    <!-- Workspace -->
+                        <!-- Home -->
+                    <!-- </span> -->
                 <!-- </div> -->
-                <!-- <div class="content" id="workspace_content"> -->
-                    <!-- <div class="navigate" id="workspace_grid"></div> -->
-                    <!-- <a href="#" id="clear_workspace"> -->
-                        <!-- <i class="icon eraser"></i> -->
-                        <!-- clear workspace -->
-                    <!-- </a> -->
-
+                <!-- <div class="content"> -->
+                    <!-- <div class="ui grid"> -->
+                        <!-- <div class="column sixteen wide" id=""> -->
+                            <!-- <div class="navigate" id="tree_grid" data-id="michael" style="overflow:auto;padding-top: 5px;"> -->
+                            <!-- </div> -->
+                        <!-- </div> -->
+                    <!-- </div> -->
                 <!-- </div> -->
 
                 <!-- ROOT DIRECTORIES -->
-                <div class="title" id="btn_getroot">
+                <!-- <div class="title" id="btn_getroot"> -->
                     <!-- <i class="icon bi-hdd large"></i> -->
-                    File System
-                </div>
-                <div class="content">
-                    <div class="navigate" id="root_grid" data-id="/" style="overflow:auto;">
-                    </div>
-                </div>
+                    <!-- File System -->
+                <!-- </div> -->
+                <!-- <div class="content"> -->
+                    <!-- <div class="navigate" id="root_grid" data-id="/" style="overflow:auto;"> -->
+                    <!-- </div> -->
+                <!-- </div> -->
 
                 <!-- DEVICES -->
-                <div class="title" title="connected devices">
-                    <span id="btn_getdrives" class="" title="">
+                <!-- <div class="title" title="connected devices"> -->
+                    <!-- <span id="btn_getdrives" class="" title=""> -->
                         <!-- <i class="icon bi-tablet large"></i> -->
-                        Devices
-                    </span>
-                </div>
-                <div id="device_content" class="content active" style="margin-left:2px;">
-                    <div class="navigate" id="device_grid"></div>
-                </div>
+                        <!-- Devices -->
+                    <!-- </span> -->
+                <!-- </div> -->
+                <!-- <div id="device_content" class="content active" style="margin-left:2px;"> -->
+                    <!-- <div class="navigate" id="device_grid"></div> -->
+                <!-- </div> -->
 
 
                 <!-- NETWORK -->
@@ -449,15 +416,15 @@
                 </div> -->
 
                 <!-- LOG -->
-                <div class="title">
+                <!-- <div class="title"> -->
                     <!-- <i class="icon bi-chat large"></i> -->
-                    Log
-                </div>
-                <div class="content centered">
+                    <!-- Log -->
+                <!-- </div> -->
+                <!-- <div class="content centered"> -->
 
-                    <div class="" id="notification"></div>
+                    <!-- <div class="" id="notification"></div> -->
 
-                </div>
+                <!-- </div> -->
 
                 <!-- <br /> -->
 
@@ -465,7 +432,7 @@
                 <!-- <button id="reset-to-system">Reset to System Theme</button>
                 <strong id="theme-source">System</strong></p> -->
 
-            </div>
+            <!-- </div> -->
 
 
 
