--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,22 @@
                     </a>
 
 
+                    <!-- LIST VIEW -->
+                    <a class="item" id="btn_list_view" title="List view.">
+                        <i class="ui icon list small"></i>
+                    </a>
+
+                    <!-- GRID VIEW -->
+                    <a class="item" id="btn_grid_view" title="Grid view">
+                        <i class="ui icon th small"></i>
+                    </a>
+
+                    <!-- DISK SUMMARY VIEW -->
+                    <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
+                        <i class="ui icon disk small"></i>
+                    </a>
+
+
                     <!-- <input type="file" id="files" name="avatar" accept="image/png, image/jpeg"> -->
 
 
@@ -210,10 +226,10 @@
                         <i class="icon bi-chevron-right small" title="go back"></i>
                     </a>
 
-                    <a class="item">
+                    <!-- <a class="item"> -->
                         <!-- <i class="ui icon chevron up"></i> -->
-                        <i class="icon bi-chevron-up small"></i>
-                    </a>
+                        <!-- <i class="icon bi-chevron-up small"></i> -->
+                    <!-- </a> -->
 
                     <div class="item" style="width:400px; height:20px">
                         <div id="autocomplete" class="autocomplete" style="width:100%;">
@@ -231,22 +247,22 @@
                     </div>
 
                     <!-- LIST VIEW -->
-                    <a class="item" id="btn_list_view" title="List view.">
-                        <i class="ui icon list small"></i>
-                    </a>
+                    <!-- <a class="item" id="btn_list_view" title="List view."> -->
+                        <!-- <i class="ui icon list small"></i> -->
+                    <!-- </a> -->
 
                     <!-- GRID VIEW -->
-                    <a class="item" id="btn_grid_view" title="Grid view">
-                        <i class="ui icon th small"></i>
-                    </a>
+                    <!-- <a class="item" id="btn_grid_view" title="Grid view"> -->
+                        <!-- <i class="ui icon th small"></i> -->
+                    <!-- </a> -->
 
                     <!-- DISK SUMMARY VIEW -->
-                    <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
-                        <i class="ui icon disk small"></i>
-                    </a>
+                    <!-- <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage."> -->
+                        <!-- <i class="ui icon disk small"></i> -->
+                    <!-- </a> -->
 
-                    <div class="items menu horizontal alighed right">
-                    </div>
+                    <!-- <div class="items menu horizontal alighed right"> -->
+                    <!-- </div> -->
 
                 </div>
 
@@ -276,7 +292,7 @@
                 </a>
                 <br>
                 <a class="item" id="mb_devices" title="Devices">
-                    <i class="icon bi-tablet large"></i>
+                    <i class="icon bi-usb-symbol large"></i>
                 </a>
                 <br>
                 <a class="item" id="mb_info" title="Info">
