Cut, copy, move updates. Feature validation testing.

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="../assets/css/semantic.min.css" />
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <!-- <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css"> -->
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/sidebar.css" />
     <script type="" src="../node_modules/chart.js/dist/chart.min.js"></script>
@@ -96,7 +97,6 @@
                     <a class="item block quit">
                         <i id="" class="icon times"></i>
                     </a>
-
 
                 </div>
             </div>
@@ -231,7 +231,7 @@
                         <!-- <i class="icon bi-chevron-up small"></i> -->
                     <!-- </a> -->
 
-                    <div class="item" style="width:400px; height:20px">
+                    <div class="" style="width:80%; height:20px">
                         <div id="autocomplete" class="autocomplete" style="width:100%;">
                             <div class="breadcrumbs buttons">
                                 <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
