File compression work.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="../assets/css/semantic.min.css" />
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <!-- <link rel="stylesheet" href="../node_modules/bulma/css/bulma.min.css"> -->
+    <link rel="stylesheet" href="../node_modules/uikit/dist/css/uikit.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/sidebar.css" />
     <script type="" src="../node_modules/chart.js/dist/chart.min.js"></script>
@@ -236,7 +236,7 @@
                             <div class="breadcrumbs buttons">
                                 <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
                             </div>
-                            <input spellcheck="false" type="text" id="breadcrumbs" value="" />
+                            <input class="" spellcheck="false" type="text" id="breadcrumbs" value="" />
                             <div id="breadcrumb_items" class="hidden"></div>
                         </div>
                     </div>
