update counts on delete

--- a/src/index.html
+++ b/src/index.html
@@ -311,232 +311,12 @@
             <div style="display: flex;">
                 <div id="file_properties" class="">
                 </div>
-                <!-- <i class="ui icon small times" style="width:23px; height:23px"></i> -->
             </div>
 
             <div id="draghandle" class="draghandle"></div>
 
-            <!-- <div id="accordion" class="ui accordion hidden" style=""> -->
-
-
-
-                <!-- HOME DIRECTORY -->
-                <!-- <div class="title" title="show home folders"> -->
-                    <!-- <i class="dropdown icon"></i> -->
-                    <!-- <span id="tree_home" class="" title="change to home directory"> -->
-                        <!-- <i class="icon large home"></i> -->
-                        <!-- <i class="icon bi-house large"></i> -->
-                        <!-- Home -->
-                    <!-- </span> -->
-                <!-- </div> -->
-                <!-- <div class="content"> -->
-                    <!-- <div class="ui grid"> -->
-                        <!-- <div class="column sixteen wide" id=""> -->
-                            <!-- <div class="navigate" id="tree_grid" data-id="michael" style="overflow:auto;padding-top: 5px;"> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                    <!-- </div> -->
-                <!-- </div> -->
-
-                <!-- ROOT DIRECTORIES -->
-                <!-- <div class="title" id="btn_getroot"> -->
-                    <!-- <i class="icon bi-hdd large"></i> -->
-                    <!-- File System -->
-                <!-- </div> -->
-                <!-- <div class="content"> -->
-                    <!-- <div class="navigate" id="root_grid" data-id="/" style="overflow:auto;"> -->
-                    <!-- </div> -->
-                <!-- </div> -->
-
-                <!-- DEVICES -->
-                <!-- <div class="title" title="connected devices"> -->
-                    <!-- <span id="btn_getdrives" class="" title=""> -->
-                        <!-- <i class="icon bi-tablet large"></i> -->
-                        <!-- Devices -->
-                    <!-- </span> -->
-                <!-- </div> -->
-                <!-- <div id="device_content" class="content active" style="margin-left:2px;"> -->
-                    <!-- <div class="navigate" id="device_grid"></div> -->
-                <!-- </div> -->
-
-
-                <!-- NETWORK -->
-                <!-- <div class="title" id="btn_network"> -->
-                    <!-- <i class="sitemap alternative large icon"></i> -->
-                    <!-- <i class="icon bi-hdd-network large"></i> -->
-                    <!-- Network -->
-                <!-- </div> -->
-                <!-- <div class="content"> -->
-
-                    <!-- <div id="accordion_network" class="ui accordion">
-                        <div class="title" title="show home folders">
-                            <span id="connect_to_server" class="" title="Connect to server" style="color: #cfcfcf">
-                                <i class="icon server"></i> Connect to server
-                            </span>
-                        </div>
-                        <div class="content">
-                            <div class="ui grid">
-                                <div class="column sixteen wide" id="">
-                                    <div class="navigate" id="tree_grid" data-id="michael" style="overflow:auto;padding-top: 5px;">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-
-                    <!-- <a href="#" id="btn_show_connect_server" class="block">
-                        <i class="icon server"></i>
-                        Connect to Server
-                    </a> -->
-
-                    <!-- <div class="ui card fluid" style="border:none"> -->
-                        <!-- <div class="content" id=""> -->
-                            <!-- <div class="navigate" id="network_grid" data-id="network" style="overflow:none"> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                    <!-- </div> -->
-
-                    <!-- <div id="connect_server_form" class="ui tiny form">
-
-                            <div class="field fluid">
-                                <input type="text" placeholder="Server" />
-                            </div>
-
-                        <div class="fields">
-                            <div class="eight wide field">
-                                <input type="text" placeholder="Port" />
-                            </div>
-                            <div class="eight wide field">
-                                <select id="connection_type" class="dd">
-                                    <option>ssh</option>
-                                    <option>smb</option>
-                                </select>
-                            </div>
-                        </div>
-                        <input type="button" value="connect" class="ui button primary" />
-
-                    </div> -->
-
-
-                <!-- </div> -->
-
-
-
-                <!-- DISK USAGE CHART -->
-                <!-- <div class="title" id='btn_disk_usage'>
-                    <i class="icon bi-bar-chart large"></i>
-                    Disk Usage
-                </div> -->
-                <!-- <div class="content">
-                    <canvas id="myChart" width="200" height="200" class="" style=""></canvas>
-                </div> -->
-
-                <!-- LOG -->
-                <!-- <div class="title"> -->
-                    <!-- <i class="icon bi-chat large"></i> -->
-                    <!-- Log -->
-                <!-- </div> -->
-                <!-- <div class="content centered"> -->
-
-                    <!-- <div class="" id="notification"></div> -->
-
-                <!-- </div> -->
-
-                <!-- <br /> -->
-
-                <!-- <button style="position: fixed; bottom: 0;" class="" id="toggle-dark-mode">Toggle Dark Mode</button> -->
-                <!-- <button id="reset-to-system">Reset to System Theme</button>
-                <strong id="theme-source">System</strong></p> -->
-
-            <!-- </div> -->
-
-
-
         </aside>
 
-         <!-- SEARCH / FIND -->
-         <!-- <div id="find_div" class="hidden"> -->
-
-            <!-- FIND -->
-            <!-- <div style="float:left; width:0%; text-align: center;">
-                <a href="#" id="btn_find_options" style="color: #cfcfcf; text-decoration: none !important;">
-                    <i class="ui icon chevron right"></i>
-                </a>
-            </div>
-            <div style="float:left; margin-left: 25px; width: 240px;">
-                <input type="text" id="find" class="find_input" placeholder="search">
-            </div>
-            <div style="position:absolute; right: 0;">
-                <a href="">
-                    <i class="ui small icon times"></i>
-                </a>
-            </div> -->
-
-            <!-- FIND OPTIONS -->
-            <!-- <div id="find_options" class=""> -->
-
-                <!-- <div class="content fluid"> -->
-                    <!-- <div class="description" style="padding-left: 20px !important"> -->
-                        <!-- <div class="ui header">
-                            Search Options
-                        </div> -->
-                        <!-- <div class="ui form tiny" style="background-color: transparent !important;">
-                            <div class="fields">
-                                <div class="eight wide field">
-                                    <div class="">
-                                        <input spellcheck="false" type="checkbox" id="find_folders" name="find_folders">
-                                        <label for="find_folders" class="label" style="font-weight: normal;">Folders</label>
-                                    </div>
-                                </div>
-
-                                <div class="eight wide field">
-                                    <div class="">
-                                        <input type="checkbox" id="find_files" name="find_files">
-                                        <label for="find_files" class="label" style="font-weight: normal;">Files</label>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="fields small">
-                                <div class="eight wide field">
-                                    <label class="label">Start date</label>
-                                    <input type="date" id="start_date" name="start_date" class="find_input" placeholder="enter start date" title="enter start date" />
-                                </div>
-
-                                <div class="eight wide field small">
-                                    <label class="label">End date</label>
-                                    <input type="date" id="end_date" name="end_date" class="find_input" placeholder="enter end date" title="enter end date" />
-                                </div>
-                            </div>
-
-                            <div class="fields">
-                                <div class="eight wide field small">
-                                    <label for="find_size" style="color:#cfcfcf" class="label">Size</label>
-                                    <input type="text" id="find_size" class="find_input" placeholder="enter size" title="enter size" />
-                                </div>
-                            </div>
-
-                            <div class="fields inline">
-                                <div class="field small">
-                                    <input type="radio" name="size_options" id="size_options" value="k">
-                                    <label for="size_options" class="label" >KB</label>
-                                </div>
-                                <div class="field">
-                                    <input type="radio" name="size_options" id="size_options" checked value="M">
-                                    <label for="size_options" class="label">MB</label>
-                                </div>
-                                <div class="field">
-                                    <input type="radio" name="size_options" id="size_options" value="G">
-                                    <label for="size_options" class="label">GB</label>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div> -->
 
         <!-- MAIN VIEW -->
         <div class="" id="main_view">
@@ -608,7 +388,7 @@
             <div id="progress_div" class="hidden">
                 <div style="display: flex;">
                     <progress id="progress" class="hidden"></progress>
-                    <i style="width:23px; height:23px;" class="ui icon times"></i>
+                    <i id="cancel_operation" style="width:23px; height:23px;" class="ui icon times"></i>
                 </div>
 
             </div>
