--- a/src/find.html
+++ b/src/find.html
@@ -92,7 +92,7 @@
 
 </div>
 
-<div class="grid content" id="search_content"  style="height:100%; overflow: scroll">
+<div class="grid content" id="search_content"  style="height:100%; overflow: auto">
     <div class="column sixteen wide" id="search_results_col">
         <div class="" id="search_results_card" style="border:none">
             <div class="content" id="search_results">
