--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
 <body data-theme="" id="body">
 
-    <div class="container">
+    <div class="container" style="">
 
         <div class="ui grid hidden" style="margin-bottom: 0px;">
             <div class="column sixteen wide">
@@ -317,9 +317,8 @@
 
         </aside>
 
-
         <!-- MAIN VIEW -->
-        <div class="" id="main_view">
+        <div class="border" id="main_view">
 
             <div class="selection-rect"></div>
 
