--- a/src/index.html
+++ b/src/index.html
@@ -103,166 +103,164 @@
             </div>
         </div>
 
-        <div class="ui grid" id="header_menus">
+        <div class="" id="header_menus">
 
-            <div class="column sixteen wide">
+            <!-- FILE MENU -->
+            <div class="ui mini fixed menu borderless" id="file_menu" style="height:20px; margin-top:0px;">
+                <a class="item " id="home">
+                    <!-- <i class="home icon"></i> -->
+                    <i class="icon bi-house small"></i>
+                    Home
+                </a>
+                <a class="item" id="documents">
+                    <!-- <i class="folder icon blue"></i> -->
+                    <i class="icon bi-folder small"></i>
+                    Documents
+                </a>
+                <a class="item" id="downloads">
+                    <!-- <i class="download icon"></i> -->
+                    <i class="icon bi-download small"></i>
+                    Downloads
+                </a>
+                <a class="item" id="pictures">
+                    <!-- <i class="images icon"> </i> -->
+                    <i class="icon bi-images small"> </i>
+                    Pictures
+                </a>
+                <a class="item" id="videos">
+                    <!-- <i class="video icon"></i> -->
+                    <i class="icon bi-camera-video small"> </i>
+                    Videos
+                </a>
+                <a class="item" id="music" title="Music">
+                    <!-- <i class="music icon"></i> -->
+                    <i class="icon bi-music-note small"> </i>
+                    Music
+                </a>
 
-                <!-- FILE MENU -->
-                <div class="ui mini fixed menu borderless" id="file_menu" style="height:20px; margin-top:0px;">
-                    <a class="item " id="home">
-                        <!-- <i class="home icon"></i> -->
-                        <i class="icon bi-house small"></i>
-                        Home
-                    </a>
-                    <a class="item" id="documents">
-                        <!-- <i class="folder icon blue"></i> -->
-                        <i class="icon bi-folder small"></i>
-                        Documents
-                    </a>
-                    <a class="item" id="downloads">
-                        <!-- <i class="download icon"></i> -->
-                        <i class="icon bi-download small"></i>
-                        Downloads
-                    </a>
-                    <a class="item" id="pictures">
-                        <!-- <i class="images icon"> </i> -->
-                        <i class="icon bi-images small"> </i>
-                        Pictures
-                    </a>
-                    <a class="item" id="videos">
-                        <!-- <i class="video icon"></i> -->
-                        <i class="icon bi-camera-video small"> </i>
-                        Videos
-                    </a>
-                    <a class="item" id="music" title="Music">
-                        <!-- <i class="music icon"></i> -->
-                        <i class="icon bi-music-note small"> </i>
-                        Music
-                    </a>
+                <a class="item" id="terminal" title="Open a terminal in the current folder">
+                    <!-- <i class="terminal icon"></i> -->
+                    <i class="icon bi-terminal small"></i>
+                    <!-- Terminal -->
+                </a>
 
-                    <a class="item" id="terminal" title="Open a terminal in the current folder">
-                        <!-- <i class="terminal icon"></i> -->
-                        <i class="icon bi-terminal small"></i>
-                        <!-- Terminal -->
-                    </a>
-
-                    <a class="item button gnome_disks" title="Gnome Disks">
-                        <!-- <div class="button" > -->
-                        <!-- <i class="icon disk"></i> -->
-                        <i class="icon bi-hdd small"></i>
-                        <!-- Disk Management -->
-                        <!-- </div> -->
-                    </a>
-
-
-                    <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
-                        <!-- todo: enable show data content -->
-                        <!-- <div class="button" data-content="Show hidden files and folders"> -->
-                        <i class="ui icon eye small"></i>
-                        <!-- show/Hide hidden -->
-                        <!-- </div> -->
-                    </a>
-
-                    <a class="item button" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
-                        <i class="small icon sort amount down"></i>
-                        <!-- Sort by date -->
-                    </a>
-
-                    <a class="item" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
-                        <i class="icon sort alphabet down small"></i>
-                        <!-- Sort by name -->
-                    </a>
-
-                    <a class="item" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
-                        <i class="icon sort amount down small"></i>
-                        <!-- Sort by size -->
-                    </a>
-
-                    <a class="item" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
-                        <i class="icon sort file alternative outline down small"></i>
-                        <!-- Sort by type -->
-                    </a>
-
-
-                    <!-- LIST VIEW -->
-                    <a class="item hidden" id="btn_list_view" title="List view.">
-                        <i class="ui icon list small"></i>
-                    </a>
-
-                    <!-- GRID VIEW -->
-                    <a class="item" id="btn_grid_view" title="Grid view">
-                        <i class="ui icon th small"></i>
-                    </a>
-
-                    <!-- DISK SUMMARY VIEW -->
-                    <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
-                        <i class="ui icon disk small"></i>
-                    </a>
-
-                    <!-- Settings -->
-                    <a class="item right settings" id="btn_settings_view">
-                        <i class="ui icon cog"></i>
-                        <!-- <div class="settings_menu"> -->
-                            <!-- <a class="item" id="btn_keyboard_settings">Keyboard shortcuts</a> -->
-                            <!-- <a class="item" id="btn_keyboard_settings">Keyboard shortcuts</a> -->
-                        <!-- </div> -->
-                    </a>
-
-                </div>
-
-                <!-- NAVIGATION MENU -->
-                <div id="navigation_menu" class="ui mini menu fixed bottom borderless" style="margin-top: -8px;">
-
-                    <a class="item" id="left">
-                        <!-- <i class="ui icon chevron left" title="go back"></i> -->
-                        <i class="icon bi-chevron-left small" title="go back"></i>
-                    </a>
-                    <a class="item" id="right">
-                        <!-- <i class="ui icon  chevron right"></i> -->
-                        <i class="icon bi-chevron-right small" title="go back"></i>
-                    </a>
-
-                    <!-- <a class="item"> -->
-                        <!-- <i class="ui icon chevron up"></i> -->
-                        <!-- <i class="icon bi-chevron-up small"></i> -->
-                    <!-- </a> -->
-
-                    <div class="" style="width:80%; height:20px">
-                        <div id="autocomplete" class="autocomplete" style="width:100%;">
-                            <div class="breadcrumbs buttons">
-                                <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
-                            </div>
-                            <input class="" spellcheck="false" type="text" id="breadcrumbs" value="" />
-                            <div id="breadcrumb_items" class="hidden"></div>
-                        </div>
-                    </div>
-
-
-                    <div class="item" id="status">
-                        <!-- status information can go here -->
-                    </div>
-
-                    <!-- LIST VIEW -->
-                    <!-- <a class="item" id="btn_list_view" title="List view."> -->
-                        <!-- <i class="ui icon list small"></i> -->
-                    <!-- </a> -->
-
-                    <!-- GRID VIEW -->
-                    <!-- <a class="item" id="btn_grid_view" title="Grid view"> -->
-                        <!-- <i class="ui icon th small"></i> -->
-                    <!-- </a> -->
-
-                    <!-- DISK SUMMARY VIEW -->
-                    <!-- <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage."> -->
-                        <!-- <i class="ui icon disk small"></i> -->
-                    <!-- </a> -->
-
-                    <!-- <div class="items menu horizontal alighed right"> -->
+                <a class="item button gnome_disks" title="Gnome Disks">
+                    <!-- <div class="button" > -->
+                    <!-- <i class="icon disk"></i> -->
+                    <i class="icon bi-hdd small"></i>
+                    <!-- Disk Management -->
                     <!-- </div> -->
+                </a>
 
-                </div>
+
+                <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
+                    <!-- todo: enable show data content -->
+                    <!-- <div class="button" data-content="Show hidden files and folders"> -->
+                    <i class="ui icon eye small"></i>
+                    <!-- show/Hide hidden -->
+                    <!-- </div> -->
+                </a>
+
+                <a class="item button" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
+                    <i class="small icon sort amount down"></i>
+                    <!-- Sort by date -->
+                </a>
+
+                <a class="item" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
+                    <i class="icon sort alphabet down small"></i>
+                    <!-- Sort by name -->
+                </a>
+
+                <a class="item" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
+                    <i class="icon sort amount down small"></i>
+                    <!-- Sort by size -->
+                </a>
+
+                <a class="item" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
+                    <i class="icon sort file alternative outline down small"></i>
+                    <!-- Sort by type -->
+                </a>
+
+
+                <!-- LIST VIEW -->
+                <a class="item hidden" id="btn_list_view" title="List view.">
+                    <i class="ui icon list small"></i>
+                </a>
+
+                <!-- GRID VIEW -->
+                <a class="item" id="btn_grid_view" title="Grid view">
+                    <i class="ui icon th small"></i>
+                </a>
+
+                <!-- DISK SUMMARY VIEW -->
+                <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
+                    <i class="ui icon disk small"></i>
+                </a>
+
+                <!-- Settings -->
+                <a class="item right settings" id="btn_settings_view">
+                    <i class="ui icon cog"></i>
+                    <!-- <div class="settings_menu"> -->
+                        <!-- <a class="item" id="btn_keyboard_settings">Keyboard shortcuts</a> -->
+                        <!-- <a class="item" id="btn_keyboard_settings">Keyboard shortcuts</a> -->
+                    <!-- </div> -->
+                </a>
 
             </div>
+
+            <!-- NAVIGATION MENU -->
+            <div id="navigation_menu" class="ui mini menu fixed bottom borderless" style="margin-top: -8px;">
+
+                <a class="item" id="left">
+                    <!-- <i class="ui icon chevron left" title="go back"></i> -->
+                    <i class="icon bi-chevron-left small" title="go back"></i>
+                </a>
+                <a class="item" id="right">
+                    <!-- <i class="ui icon  chevron right"></i> -->
+                    <i class="icon bi-chevron-right small" title="go back"></i>
+                </a>
+
+                <!-- <a class="item"> -->
+                    <!-- <i class="ui icon chevron up"></i> -->
+                    <!-- <i class="icon bi-chevron-up small"></i> -->
+                <!-- </a> -->
+
+                <div class="" style="width:80%; height:20px">
+                    <div id="autocomplete" class="autocomplete" style="width:100%;">
+                        <div class="breadcrumbs buttons">
+                            <!-- MAKE SOME BREADCRUMB BUTTONS HERE -->
+                        </div>
+                        <input class="" spellcheck="false" type="text" id="breadcrumbs" value="" />
+                        <div id="breadcrumb_items" class="hidden"></div>
+                    </div>
+                </div>
+
+
+                <div class="item" id="status">
+                    <!-- status information can go here -->
+                </div>
+
+                <!-- LIST VIEW -->
+                <!-- <a class="item" id="btn_list_view" title="List view."> -->
+                    <!-- <i class="ui icon list small"></i> -->
+                <!-- </a> -->
+
+                <!-- GRID VIEW -->
+                <!-- <a class="item" id="btn_grid_view" title="Grid view"> -->
+                    <!-- <i class="ui icon th small"></i> -->
+                <!-- </a> -->
+
+                <!-- DISK SUMMARY VIEW -->
+                <!-- <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage."> -->
+                    <!-- <i class="ui icon disk small"></i> -->
+                <!-- </a> -->
+
+                <!-- <div class="items menu horizontal alighed right"> -->
+                <!-- </div> -->
+
+            </div>
+
+
 
         </div>
 
