--- a/src/confirm_move.html
+++ b/src/confirm_move.html
@@ -13,7 +13,7 @@
         <div class="center" style="width:90%">
 
             <div class="ui content" id="confirm">
-                
+
             </div>
 
 
@@ -21,8 +21,8 @@
 
     </body>
 
-    <script type="" src="../assets/scripts/jquery-3.6.0.min.js"></script>
-    <script type="" src="../assets/scripts/semantic.min.js"></script>
+    <script type="" src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script type="" src="../assets/js/semantic.min.js"></script>
     <script type="" src="confirm.js"></script>
 
 </html>
