Updated find files and folders

--- a/src/find.html
+++ b/src/find.html
@@ -71,8 +71,8 @@
                             <input type="text" id="find_size" class="find_input" placeholder="enter size" title="enter size">
                         </div>
                         <div class="eight wide field small">
-                            <label for="find_depth" style="color:#cfcfcf" class="label">Search depth</label>
-                            <input type="text" id="find_depth" class="find_input" placeholder="depth" title="enter depth of the search" value="1">
+                            <label for="depth" style="color:#cfcfcf" class="label">Search depth</label>
+                            <input type="text" id="depth" class="find_input" placeholder="depth" title="enter depth of the search" value="1">
                         </div>
                     </div>
 
@@ -97,11 +97,11 @@
     </div>
 
 </div>
-
+<div id="search_info"></div>
 <div class="grid content" id="search_content" style="height:100%;">
     <div class="column sixteen wide" id="search_results_col">
         <div class="" id="search_results_card" style="border:none">
-            <div class="content" id="search_results"> <div class="column three wide"><div class="ui card fluid nav_item nav" draggable="true" id="find_0" data-href="/home/michael/Downloads/zip"><div class="ui items"><div class="item fluid"><div class="image"><img class="icon" draggable="false" src="/usr/share/icons/Yaru-blue/32x32/places/folder.png"></div><div class="content" style="overflow-wrap: break-word;"><a href="/home/michael/Downloads/zip" title="open file? /home/michael/Downloads/zip" id="header_find_0" class="header_link" draggable="false">zip</a><div><div><input required="required" spellcheck="false" id="edit_find_0" class="hidden input" type="text"></div></div><div class="description no-wrap" draggable="false"></div><div class="extra" draggable="false"></div><audio></audio><div id="progress_find_0" class="hidden progress"><progress value="1" max="100" id="progress_bar_find_0"></progress></div></div><div class="popup"></div></div></div></div></div><div class="column three wide"><div class="ui card fluid nav_item nav" draggable="true" id="find_1" data-href="/home/michael/Downloads/zip/Zip"><div class="ui items"><div class="item fluid"><div class="image"><img class="icon" draggable="false" src="/usr/share/icons/Yaru-blue/32x32/places/folder.png"></div><div class="content" style="overflow-wrap: break-word;"><a href="/home/michael/Downloads/zip/Zip" title="open file? /home/michael/Downloads/zip/Zip" id="header_find_1" class="header_link" draggable="false">Zip</a><div><div><input required="required" spellcheck="false" id="edit_find_1" class="hidden input" type="text"></div></div><div class="description no-wrap" draggable="false"></div><div class="extra" draggable="false"></div><audio></audio><div id="progress_find_1" class="hidden progress"><progress value="1" max="100" id="progress_bar_find_1"></progress></div></div><div class="popup"></div></div></div></div></div></div>
+            <div class="content" id="search_results"> <div class="column three wide"><div class="ui card fluid nav_item nav" draggable="true" id="find_0" data-href="/home/michael/Downloads/zip"><div class="ui items"><div class="item fluid"><div class="image"><img class="icon" draggable="false" src="/usr/share/icons/Yaru-blue/32x32/places/folder.png"></div><div class="content" style="overflow-wrap: break-word;"><a href="/home/michael/Downloads/zip" title="open file? /home/michael/Downloads/zip" id="header_find_0" class="header_link" draggable="false">zip</a><div><div><input required="required" spellcheck="false" id="edit_find_0" class="hidden input" type="text"></div></div><div class="description no-wrap" draggable="false"></div><div class="extra" draggable="false"></div><audio></audio><div id="progress_find_0" class="hidden progress"><progress value="1" max="100" id="progress_bar_find_0"></progress></div></div><div class="popup"></div></div></div></div></div></div>
         </div>
     </div>
 </div>
