--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="../assets/css/semantic.min.css" />
     <link rel="stylesheet" href="../node_modules/bootstrap-icons/font/bootstrap-icons.css">
-    <!-- <link rel="stylesheet" href="../node_modules/uikit/dist/css/uikit.min.css"> -->
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="../assets/css/grid.css" />
     <link rel="stylesheet" href="../assets/css/sidebar.css" />
@@ -138,64 +137,68 @@
                     Music
                 </a>
 
-                <a class="item" id="terminal" title="Open a terminal in the current folder">
-                    <!-- <i class="terminal icon"></i> -->
-                    <i class="icon bi-terminal small"></i>
-                    <!-- Terminal -->
-                </a>
+                <div class="hidden">
 
-                <a class="item button gnome_disks" title="Gnome Disks">
-                    <!-- <div class="button" > -->
-                    <!-- <i class="icon disk"></i> -->
-                    <i class="icon bi-hdd small"></i>
-                    <!-- Disk Management -->
-                    <!-- </div> -->
-                </a>
+                    <a class="item" id="terminal" title="Open a terminal in the current folder">
+                        <!-- <i class="terminal icon"></i> -->
+                        <i class="icon bi-terminal small"></i>
+                        <!-- Terminal -->
+                    </a>
 
-
-                <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
-                    <!-- todo: enable show data content -->
-                    <!-- <div class="button" data-content="Show hidden files and folders"> -->
-                    <i class="ui icon eye small"></i>
-                    <!-- show/Hide hidden -->
-                    <!-- </div> -->
-                </a>
-
-                <a class="item button" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
-                    <i class="small icon sort amount down"></i>
-                    <!-- Sort by date -->
-                </a>
-
-                <a class="item" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
-                    <i class="icon sort alphabet down small"></i>
-                    <!-- Sort by name -->
-                </a>
-
-                <a class="item" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
-                    <i class="icon sort amount down small"></i>
-                    <!-- Sort by size -->
-                </a>
-
-                <a class="item" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
-                    <i class="icon sort file alternative outline down small"></i>
-                    <!-- Sort by type -->
-                </a>
+                    <a class="item button gnome_disks" title="Gnome Disks">
+                        <!-- <div class="button" > -->
+                        <!-- <i class="icon disk"></i> -->
+                        <i class="icon bi-hdd small"></i>
+                        <!-- Disk Management -->
+                        <!-- </div> -->
+                    </a>
 
 
-                <!-- LIST VIEW -->
-                <a class="item hidden" id="btn_list_view" title="List view.">
-                    <i class="ui icon list small"></i>
-                </a>
+                    <a class="item button" id="btn_show_hidden_folders" title="Show hidden files and directories">
+                        <!-- todo: enable show data content -->
+                        <!-- <div class="button" data-content="Show hidden files and folders"> -->
+                        <i class="ui icon eye small"></i>
+                        <!-- show/Hide hidden -->
+                        <!-- </div> -->
+                    </a>
 
-                <!-- GRID VIEW -->
-                <a class="item" id="btn_grid_view" title="Grid view">
-                    <i class="ui icon th small"></i>
-                </a>
+                    <a class="item button" id="sort_by_date" title="Sort by Date (Click twice to change sort order)">
+                        <i class="small icon sort amount down"></i>
+                        <!-- Sort by date -->
+                    </a>
 
-                <!-- DISK SUMMARY VIEW -->
-                <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
-                    <i class="ui icon disk small"></i>
-                </a>
+                    <a class="item" id="sort_by_name" title="Sort by Name (Click twice to change sort order)">
+                        <i class="icon sort alphabet down small"></i>
+                        <!-- Sort by name -->
+                    </a>
+
+                    <a class="item" id="sort_by_size" title="Sort by Size (Click twice to change sort order)">
+                        <i class="icon sort amount down small"></i>
+                        <!-- Sort by size -->
+                    </a>
+
+                    <a class="item" id="sort_by_type" title="Sort by Type (Click twice to change sort order)">
+                        <i class="icon sort file alternative outline down small"></i>
+                        <!-- Sort by type -->
+                    </a>
+
+
+                    <!-- LIST VIEW -->
+                    <a class="item" id="btn_list_view" title="List view.">
+                        <i class="ui icon list small"></i>
+                    </a>
+
+                    <!-- GRID VIEW -->
+                    <a class="item" id="btn_grid_view" title="Grid view">
+                        <i class="ui icon th small"></i>
+                    </a>
+
+                    <!-- DISK SUMMARY VIEW -->
+                    <a class="item" id="btn_disk_view" title="Disk summary view. Get a summary of disk usage.">
+                        <i class="ui icon disk small"></i>
+                    </a>
+
+                </div>
 
                 <!-- Settings -->
                 <div class="item right settings">
@@ -230,7 +233,7 @@
                     <i class="icon bi-chevron-right small" title="go back"></i>
                 </a>
 
-                <!-- <a class="item"> -->
+               <!-- <a class="item"> -->
                     <!-- <i class="ui icon chevron up"></i> -->
                     <!-- <i class="icon bi-chevron-up small"></i> -->
                 <!-- </a> -->
@@ -411,8 +414,7 @@
 
 <script type="" src="../assets/js/jquery-3.6.0.min.js"></script>
 <script type="" src="../assets/js/semantic.min.js"></script>
-<script type="" src="../assets/js/popup.min.js"></script>
-<!-- <script type="" src="../node_modules/dragselect/dist/ds.min.js"></script> -->
+<!-- <script type="" src="../assets/js/popup.min.js"></script> -->
 <script type="" src="index.js"></script>
 
 
